Fixed text alignment to center in about.css.

--- a/about.css
+++ b/about.css
@@ -34,6 +34,7 @@
 #about-headline {
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding-top: 30px;
     gap: 10px;
 }
@@ -170,6 +171,6 @@
 #about-cta-headline {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    text-align: center;
     gap: 15px;
 }
